# TinyRHI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
TinyRHI/: CMakeLists.txt
TinyRHI/interface/: bind_group.h  buffer.h  command_list.h  device.h  instance.h  pipeline.h  render_pass.h  resource_state.h  rhi_types.h  sampler.h  shader.h  surface.h  swapchain.h  texture.h  timestamp_query.h
TinyRHI/opengl/: buffer.cpp  command_list.cpp  command_list.h  device.cpp  device.h  gl_convert.cpp  gl_convert.h  instance.cpp  instance.h  native_swapchain.h  pipeline.cpp  shader.cpp  surface.cpp  surface.h  swapchain.cpp  swapchain.h  texture.cpp  timestamp_query.cpp  wgl_swapchain_win32.cpp
examples/: CMakeLists.txt  alpha_blend.cpp  clear_window.cpp  depth_test.cpp  dynamic_uniform_offsets.cpp  indexed_quad.cpp  line_grid.cpp  multi_vertex_buffers.cpp  push_constants.cpp  scissor.cpp  textured_quad.cpp  triangle.cpp  uniform_triangle.cpp
examples/IBL/: CMakeLists.txt  ibl_pbr.cpp
examples/IBL/glTF/EnvironmentTest_images/: roughness_metallic_0.png.lunameta  roughness_metallic_1.png.lunameta
examples/alpha_blend/: CMakeLists.txt  alpha_blend.cpp
examples/brdf_lut/: CMakeLists.txt  brdf_lut.cpp
examples/clear_window/: CMakeLists.txt  clear_window.cpp
examples/common/: upload_helpers.cpp  upload_helpers.h  win32_gl_surface.cpp  win32_gl_surface.h  win32_surface.cpp  win32_surface.h  win32_window.cpp  win32_window.h
examples/compute_particles/: CMakeLists.txt  compute_particles.cpp
examples/cube_map/: CMakeLists.txt  cube_map.cpp
examples/depth_test/: CMakeLists.txt  depth_test.cpp
examples/dynamic_uniform_offsets/: CMakeLists.txt  dynamic_uniform_offsets.cpp
examples/imgui/: CMakeLists.txt  imgui_sample_app.cpp  imgui_sample_app.h  imgui_viewport_surface.cpp  imgui_viewport_surface.h  main.cpp  tiny_rhi_imgui_renderer.cpp  tiny_rhi_imgui_renderer.h  win32_imgui_platform.cpp  win32_imgui_platform.h
examples/line_grid/: CMakeLists.txt  line_grid.cpp
examples/multi_vertex_buffers/: CMakeLists.txt  multi_vertex_buffers.cpp
examples/push_constants/: CMakeLists.txt  push_constants.cpp
examples/scissor/: CMakeLists.txt  scissor.cpp
examples/textured_quad/: CMakeLists.txt  textured_quad.cpp
examples/triangle/: CMakeLists.txt  triangle.cpp
tests/: CMakeLists.txt  backend_factory_tests.cpp  bind_group_tests.cpp  gl_convert_tests.cpp  main.cpp  pipeline_layout_tests.cpp  rhi_type_tests.cpp  test_framework.h  texture_array_tests.cpp  timestamp_query_tests.cpp
